# neoreport

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
cmd/app/: CMakeLists.txt  app.cpp
cmd/neoreport/: CMakeLists.txt  app.cpp
cmd/testing/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
include/api/: server.h
include/core/: log.h  report.h  thread_pool.h
include/engine/ncreport/: engine.h
src/app/: CMakeLists.txt
src/app/include/app/: app_options.h
src/app/src/: app_options.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: report.h
src/core/src/: log.cpp  report.cpp
src/engine/: CMakeLists.txt
src/engine/ncreport/: CMakeLists.txt  engine.cpp  engine.h
src/http/: CMakeLists.txt
src/http/include/http/: handler.h
src/http/src/: handler.cpp
src/ncreport/: CMakeLists.txt
src/ncreport/include/ncreport/: engine.h
src/ncreport/src/: engine.cpp  q_engine.h
test/: CMakeLists.txt  main.cpp  test.cpp
